#8383 use separate logback.xml for k8s, default Helm values

--- a/external/helm/insights-api/templates/services.yaml
+++ b/external/helm/insights-api/templates/services.yaml
@@ -45,5 +45,6 @@ spec:
   type: ExternalName
   externalName: {{ .Values.databaseHost }}
   ports:
-    - port: 5432
+    - port: {{ .Values.databasePort }}
+      protocol: TCP
 ---
