--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -14,9 +14,10 @@ metadata:
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 data:
   SPRING_PROFILES_ACTIVE: {{ .Values.envName }}
-  SPRING_DATASOURCE_URL: 'jdbc:postgresql://{{ .Values.envName }}-insights-api-database:5432/insights-api'
+  SPRING_DATASOURCE_URL: 'jdbc:postgresql://{{ .Values.envName }}-insights-api-database:{{ .Values.databasePort }}/insights-api'
   SPRING_DATASOURCE_USERNAME: insights-api
-  #TODO do not use uppercase var names for hikari properties otherwise startup fails with smth like 'The configuration of the pool is sealed once started.'
+  SERVER_SERVLET_CONTEXT_PATH: / #TODO remove once changed in application.yaml
+  #do not use uppercase var names for hikari properties otherwise startup fails with smth like 'The configuration of the pool is sealed once started.'
   spring.datasource.hikari.connection-timeout: '600000'
   spring.datasource.hikari.maximum-pool-size: '20'
   SPRING_JDBC_TEMPLATE_QUERY_TIMEOUT: '600'
@@ -29,7 +30,7 @@ data:
 #kind: Secret
 #metadata:
 #  name: {{ .Values.envName }}-insights-api
-#  namespace: sandbox-isemichastnov
+#  namespace: {{ .Values.envName }}-insights-api
 #labels:
 #  app.kubernetes.io/name: insights-api
 #  app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
