--- a/external/helm/insights-api/values/values-dev.yaml
+++ b/external/helm/insights-api/values/values-dev.yaml
@@ -1,5 +1,6 @@
-# Default values for insights-api.
+# DEV values for insights-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 envName: dev
 databaseHost: milan.k8s-01.kontur.io.
+databasePort: 5432
