--- a/external/helm/insights-api/values/values-prod.yaml
+++ b/external/helm/insights-api/values/values-prod.yaml
@@ -1,5 +1,6 @@
-# Default values for insights-api.
+# PROD values for insights-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 envName: prod
 databaseHost: paris.k8s-01.kontur.io.
+databasePort: 5432
