#8383 use cert-manager.io/issuer: letsencrypt-staging

--- a/external/helm/insights-api/templates/certificate.yaml
+++ b/external/helm/insights-api/templates/certificate.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   secretName: {{ .Values.envName }}-insights-api-k8s-01-konturlabs-com-tls
   issuerRef:
-    name: letsencrypt-production #use letsencrypt-staging for testing
+    name: letsencrypt-staging #use letsencrypt-staging for testing
     kind: ClusterIssuer
     group: cert-manager.io
   commonName: {{ .Values.envName }}-insights-api.k8s-01.konturlabs.com
