--- a/external/helm/insights-api/templates/ingress.yaml
+++ b/external/helm/insights-api/templates/ingress.yaml
@@ -12,12 +12,12 @@ metadata:
   annotations:
     meta.helm.sh/release-name: {{ .Release.Name }}
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
-    cert-manager.io/issuer: letsencrypt-staging #use letsencrypt-staging for testing
+    cert-manager.io/cluster-issuer: letsencrypt-production #use letsencrypt-staging for testing
 spec:
   tls:
     - hosts:
         - {{ .Values.envName }}-insights-api.k8s-01.konturlabs.com
-      secretName: {{ .Values.envName }}-insights-api-tls
+      secretName: {{ .Values.envName }}-insights-api-tls # < cert-manager will store the created certificate in this secret.
   ingressClassName: nginx
   rules:
     - host: {{ .Values.envName }}-insights-api.k8s-01.konturlabs.com
