#8383 set pod limits

--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -43,6 +43,13 @@ spec:
         - name: insights-api
           image: nexus.kontur.io:8085/konturdev/insights-api:{{ .Chart.Version }}
           imagePullPolicy: Always #don't use Always for local minikube - otherwise it tries reloading from remote
+          resources:
+            requests:
+              cpu: "1" #TODO test
+              memory: "6G"
+            limits:
+              cpu: "1" #TODO test
+              memory: "12G"
           env:
             - name: OTEL_SERVICE_NAME
               valueFrom:
