--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -47,9 +47,12 @@ spec:
             requests:
               cpu: "1" #TODO test
               memory: "6G"
+            {{ if eq .Values.envName "prod" }}
             limits:
-              cpu: "1" #TODO test
               memory: "12G"
+            {{ else }}
+            #resource limits are not specified for non-prod stages so that they have lower priority
+            {{ end }}
           env:
             - name: OTEL_SERVICE_NAME
               valueFrom:
