--- a/external/helm/insights-api/templates/ingress.yaml
+++ b/external/helm/insights-api/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{ if ne .Values.envName "local" }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -32,3 +33,4 @@ spec:
                 port:
                   number: 8625
 ---
+{{ end }}
