--- a/external/helm/insights-api/values.yaml
+++ b/external/helm/insights-api/values.yaml
@@ -1,6 +1,6 @@
 # Default values for insights-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-envName: dev
+envName: local
 databaseHost: docker.for.mac.host.internal
 databasePort: 8900
