--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.envName }}-insights-api
-  namespace: {{ .Values.envName }}-insights-api
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: insights-api
     app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
@@ -24,13 +24,22 @@ data:
   OTEL_TRACES_EXPORTER: none #TODO change to 'otlp' once OpenTelemetry collector daemon is available
   OTEL_METRICS_EXPORTER: none
   OTEL_LOGS_EXPORTER: none
+  #TODO remove cache properties once reddis is utilized
+  cache.functions: "false"
+  cache.humanitarian-impact: "false"
+  cache.osm-quality: "false"
+  cache.population: "false"
+  cache.thermal-spot: "false"
+  cache.urban-core: "false"
+  cache.correlation-rate: "false"
+  cache.advanced-analytics: "false"
 ---
 #TODO: create manually, not managed by Helm as it's a secret
 #apiVersion: v1
 #kind: Secret
 #metadata:
 #  name: {{ .Values.envName }}-insights-api
-#  namespace: {{ .Values.envName }}-insights-api
+#  namespace: {{ .Release.Namespace }} (effectively {{ .Values.envName }}-insights-api)
 #labels:
 #  app.kubernetes.io/name: insights-api
 #  app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
