--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.envName }}-insights-api
-  namespace: {{ .Values.envName }}-insights-api
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: insights-api
     app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
