--- a/external/helm/insights-api/templates/services.yaml
+++ b/external/helm/insights-api/templates/services.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.envName }}-insights-api
-  namespace: {{ .Values.envName }}-insights-api
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: insights-api
     app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
