--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -72,7 +72,7 @@ spec:
                 name: {{ .Values.envName }}-insights-api #TODO must contain SPRING_DATASOURCE_PASSWORD
           readinessProbe:
             httpGet:
-              path: /health/readiness
+              path: /insights-api/health/readiness
               port: 8625
             failureThreshold: 1
             periodSeconds: 60
