--- a/external/helm/insights-api/templates/servicemonitor.yaml
+++ b/external/helm/insights-api/templates/servicemonitor.yaml
@@ -17,7 +17,7 @@ spec:
   endpoints:
     - interval: 30s
       port: main
-      path: /metrics
+      path: /insights-api/metrics
       scheme: http
   selector:
     matchLabels:
