#8383 K8S set jib base image to JDK 17, set -server, -Xmx, -Xms java opts

--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
           imagePullPolicy: Always #don't use Always for local minikube - otherwise it tries reloading from remote
           resources:
             requests:
-              cpu: "1" #TODO test
+              cpu: "1"
               memory: "6G"
             {{ if eq .Values.envName "prod" }}
             limits:
