--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,6 +5,9 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/test-master-changelog.xml
+  cache:
+    redis:
+      time-to-live: 86400
 
 bivatiateMatrix:
   highCorrelationLevel: 0.8
