--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -23,15 +23,7 @@ data:
   OTEL_TRACES_EXPORTER: none #TODO change to 'otlp' once OpenTelemetry collector daemon is available
   OTEL_METRICS_EXPORTER: none
   OTEL_LOGS_EXPORTER: none
-  #TODO remove cache properties once reddis is utilized
-  cache.functions: "false"
-  cache.humanitarian-impact: "false"
-  cache.osm-quality: "false"
-  cache.population: "false"
-  cache.thermal-spot: "false"
-  cache.urban-core: "false"
-  cache.correlation-rate: "false"
-  cache.advanced-analytics: "false"
+  spring.redis.host: '{{ .Values.envName }}-insights-api-redis'
 ---
 #TODO: create manually, not managed by Helm as it's a secret
 #apiVersion: v1
@@ -46,4 +38,19 @@ data:
 #  stage: {{ .Values.envName }}
 #data:
 #  SPRING_DATASOURCE_PASSWORD: base64 encoded password
+#  spring.redis.password: base64 encoded password
+---
+#TODO: create manually, not managed by Helm as it's a secret
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  name: redis
+#  namespace: {{ .Release.Namespace }} (effectively {{ .Values.envName }}-insights-api-redis)
+#labels:
+#  app.kubernetes.io/name: insights-api-redis
+#  app.kubernetes.io/instance: {{ .Values.envName }}-insights-api-redis
+#  app.kubernetes.io/version: {{ .Chart.Version }}
+#  stage: {{ .Values.envName }}
+#data:
+#  redis-password: base64 encoded password
 ---
