--- a/external/helm/insights-api/values/values-dev.yaml
+++ b/external/helm/insights-api/values/values-dev.yaml
@@ -1,6 +1,7 @@
 # DEV values for insights-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+replicas: 2
 envName: dev
 databaseHost: milan.k8s-01.kontur.io.
 databasePort: 5432
