--- a/external/helm/insights-api/values/values-test.yaml
+++ b/external/helm/insights-api/values/values-test.yaml
@@ -1,6 +1,7 @@
 # TEST values for insights-api.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+replicas: 2
 envName: test
 databaseHost: london.k8s-01.kontur.io.
 databasePort: 5432
