#11096 add redis pod to deployment: set auto eviction

--- a/external/helm/insights-api/templates/redis-conf.yaml
+++ b/external/helm/insights-api/templates/redis-conf.yaml
@@ -21,6 +21,9 @@ data:
     # End of master configuration
   redis.conf: |-
     # User-supplied common configuration:
+    # see https://redis.io/docs/manual/eviction/
+    maxmemory 768mb
+    maxmemory-policy allkeys-lru
     # Enable AOF https://redis.io/topics/persistence#append-only-file
     appendonly yes
     # Disable RDB persistence, AOF persistence already enabled.
