#11096 add redis pod to deployment: added redis_exporter sidecar for prometheus scraping

--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -204,6 +204,16 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: IfNotPresent
+        - name: redis-exporter
+          image: oliver006/redis_exporter:v1.43.0
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+          ports:
+            - name: metrics
+              protocol: TCP
+              containerPort: 9121
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
