--- a/external/helm/insights-api/templates/servicemonitor.yaml
+++ b/external/helm/insights-api/templates/servicemonitor.yaml
@@ -27,4 +27,32 @@ spec:
       app.kubernetes.io/managed-by: "Helm"
       stage: {{ .Values.envName }}
 ---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: {{ .Values.envName }}-insights-api-redis
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: insights-api-redis
+    app.kubernetes.io/instance: {{ .Values.envName }}-insights-api-redis
+    app.kubernetes.io/version: {{ .Chart.Version }}
+    app.kubernetes.io/managed-by: "Helm"
+    stage: {{ .Values.envName }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
+spec:
+  endpoints:
+    - interval: 30s
+      port: metrics
+      path: /metrics
+      scheme: http
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: insights-api-redis
+      app.kubernetes.io/instance: {{ .Values.envName }}-insights-api-redis
+      #don't add app.kubernetes.io/version
+      app.kubernetes.io/managed-by: "Helm"
+      stage: {{ .Values.envName }}
+---
 {{ end }}
