#11096 add redis pod to deployment: added redis_exporter secret conf

--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -214,6 +214,14 @@ spec:
             - name: metrics
               protocol: TCP
               containerPort: 9121
+          env:
+            - name: REDIS_ADDR
+              value: redis://localhost:6379
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis
+                  key: redis-password
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
