--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.release.version>3.3.0</maven-assembly-plugin.release.version>
 
-        <jib.source.image>openjdk:17-alpine</jib.source.image>
+        <jib.source.image>openjdk:16-alpine</jib.source.image>
     </properties>
 
     <dependencies>
@@ -269,26 +269,26 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.googlecode.maven-download-plugin</groupId>
-                <artifactId>download-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <executions>
-                    <execution>
-                        <id>download-opentelemetry-agent</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>wget</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <url>https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.13.1/opentelemetry-javaagent.jar</url>
-                    <unpack>false</unpack>
-                    <outputDirectory>${project.build.sourceDirectory}/../jib/opentelemetry/</outputDirectory>
-                    <md5>72a2f5977750a811d9d34aae58cd9b8a</md5>
-                </configuration>
-            </plugin>
+<!--            <plugin>--><!--TODO uncomment to use OpenTelemetry tracing-->
+<!--                <groupId>com.googlecode.maven-download-plugin</groupId>-->
+<!--                <artifactId>download-maven-plugin</artifactId>-->
+<!--                <version>1.6.8</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>download-opentelemetry-agent</id>-->
+<!--                        <phase>process-resources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>wget</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <url>https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.16.0/opentelemetry-javaagent.jar</url>-->
+<!--                    <unpack>false</unpack>-->
+<!--                    <outputDirectory>${project.build.sourceDirectory}/../jib/opentelemetry/</outputDirectory>-->
+<!--                    <md5>4f97ebd74d075e60c76ecdf47b61006a</md5>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
@@ -298,7 +298,7 @@
                     <container>
                         <mainClass>io.kontur.insightsapi.InsightsApiApplication</mainClass>
                         <jvmFlags>
-                            <jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>
+<!--                            <jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>--><!--TODO uncomment to use OpenTelemetry tracing-->
                             <jvmFlag>-Dlogging.config=classpath:logback-stdout-json.xml</jvmFlag>
                             <jvmFlag>-server</jvmFlag>
                             <jvmFlag>-Xmx3200m</jvmFlag>
