--- a/pom.xml
+++ b/pom.xml
@@ -303,7 +303,7 @@
                             <jvmFlag>-server</jvmFlag>
                             <jvmFlag>-Xmx3200m</jvmFlag>
                             <jvmFlag>-Xms3200m</jvmFlag>
-                            <jvmFlag>+HeapDumpOnOutOfMemoryError</jvmFlag>
+                            <jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
                             <jvmFlag>-XX:HeapDumpPath=/tmp/insights_api_oom.hprof</jvmFlag>
                         </jvmFlags>
                     </container>
