--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -13,6 +13,7 @@ metadata:
     meta.helm.sh/release-name: {{ .Release.Name }}
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 data:
+  SPRING_JMX_ENABLED: '{{ .Values.jmxEnabled }}'
   SPRING_PROFILES_ACTIVE: {{ .Values.envName }}
   SPRING_DATASOURCE_URL: 'jdbc:postgresql://{{ .Values.databaseHost }}:{{ .Values.databasePort }}/insights-api'
   SPRING_DATASOURCE_USERNAME: insights-api
