--- a/external/helm/insights-api/values/values-prod.yaml
+++ b/external/helm/insights-api/values/values-prod.yaml
@@ -5,5 +5,6 @@ replicas: 2
 envName: prod
 databaseHost: paris.k8s-01.kontur.io.
 databasePort: 5432
+jmxEnabled: false
 
 dnsNameOuter: apps.kontur.io
