--- a/external/helm/insights-api/values/values-test.yaml
+++ b/external/helm/insights-api/values/values-test.yaml
@@ -5,5 +5,6 @@ replicas: 2
 envName: test
 databaseHost: london.k8s-01.kontur.io.
 databasePort: 5432
+jmxEnabled: true
 
 dnsNameOuter: test-apps.konturlabs.com
