#11653 updated resources.memory settings

--- a/external/helm/insights-api/templates/deployment.yaml
+++ b/external/helm/insights-api/templates/deployment.yaml
@@ -50,9 +50,9 @@ spec:
           resources:
             requests:
               cpu: "1"
-              memory: "6G"
+              memory: "4700Mi"
             limits:
-              memory: "12G"
+              memory: "9Gi"
           env:
             - name: OTEL_SERVICE_NAME
               valueFrom:
