--- a/external/helm/insights-api/templates/prometheusrule.yaml
+++ b/external/helm/insights-api/templates/prometheusrule.yaml
@@ -4,13 +4,13 @@ metadata:
   labels:
     prometheus: k8s
     role: alert-rules
-  name: PlatformPods
+  name: {{ .Values.envName}}-insights-api-platform-pods
   namespace: {{ .Release.Namespace }}
 spec:
   groups:
     - name: PlatformPodsUnavailable
       rules:
-        - alert: PlatformPodsUnavailable-{{ camelcase .Values.envName }}InsightsApi
+        - alert: {{ camelcase .Values.envName }}-PlatformPodsUnavailable-InsightsApi
           annotations:
             message: 'There are {{ "{{$value}}" }} Ready pods in {{ .Values.envName }} Insights API'
             summary: There are less Ready pods than required
