#11673 disabled internal graphql tracing

--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -25,7 +25,7 @@ data:
   OTEL_METRICS_EXPORTER: none
   OTEL_LOGS_EXPORTER: none
   spring.redis.host: '{{ .Values.envName }}-insights-api-redis'
-  graphql.servlet.tracing-enabled: 'metrics-only'
+  graphql.servlet.tracing-enabled: 'false' #11653
 ---
 #TODO: create manually, not managed by Helm as it's a secret
 #apiVersion: v1
