--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
   cache:
     type: redis
     cache-names: urban-core, thermal-spot, population, osm-quality, humanitarian-impact, functions, correlation-rate-all,
-      correlation-rate-num-den, correlation-rate-polygon, correlation-rate-num-not-empty-layers, advanced-analytics-all,
-      advanced-analytics
+      metrics-num-den, correlation-rate-polygon, metrics-num-not-empty-layers, advanced-analytics-all,
+      advanced-analytics, covariance-rate-all, covariance-rate-polygon
     redis:
       time-to-live: 86400s
   redis:
@@ -94,6 +94,8 @@ cache:
   urban-core: true
   correlation-rate: true
   advanced-analytics: true
+  covariance-rate: true
+  metrics: true
 
 graphql-request:
   parser-options:
