#11830 Changed test.application.yml

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,6 +22,8 @@ cache:
   urban-core: true
   correlation-rate: true
   advanced-analytics: true
+  covariance-rate: true
+  metrics: true
 
 graphql-request:
   parser-options:
