removed helm chart and legacy packaging scripts, fixed github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           echo '${{ secrets.NEXUS_DEPLOYER_PASS }}' | docker login nexus.kontur.io:8084 -u '${{ secrets.NEXUS_DEPLOYER }}' --password-stdin
           echo '${{ secrets.NEXUS_DEPLOYER_PASS }}' | docker login nexus.kontur.io:8085 -u '${{ secrets.NEXUS_DEPLOYER }}' --password-stdin
 
-          mvn $MAVEN_CLI_OPTS clean install -DskipTests jib:build -U -Prelease
+          mvn $MAVEN_CLI_OPTS clean install -DskipTests jib:build -U
           ls -lA ./external/helm/insights-api/
 
       - name: Uploading build artifacts
