--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,12 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Extracting metadata from a cloned repository
+        id: get-cloned
+        run: |-
+          echo "::set-output name=SHA::$(git log -1 --format='%H')"
+          echo "::set-output name=REF::$(git rev-parse --abbrev-ref HEAD 2>/dev/null)"
+
       - uses: actions/setup-java@v3
         with:
           java-version: 16
