11843 state for release

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,3 +108,6 @@ graphql-request:
 database:
   transposed:
     table: stat_h3_test
+  bivariate:
+    indicators:
+      table: bivariate_indicators_test
