--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -33,3 +33,6 @@ graphql-request:
 database:
   transposed:
     table: stat_h3_test
+  bivariate:
+    indicators:
+      table: bivariate_indicators_test
