--- a/pom.xml
+++ b/pom.xml
@@ -16,25 +16,26 @@
     </parent>
 
     <properties>
+        <image.tag>${IMAGE_TAG}</image.tag>
         <java.version>16</java.version>
         <maven.compiler.release>16</maven.compiler.release>
         <project.resource.directory>src/main/resources</project.resource.directory>
 
-        <spring-retry.version>1.3.3</spring-retry.version>
-        <spring-aspects.version>5.3.19</spring-aspects.version>
-        <springdoc-openapi-ui.version>1.6.8</springdoc-openapi-ui.version>
-        <liquibase-core.version>4.5.0</liquibase-core.version>
+        <spring-retry.version>1.3.4</spring-retry.version>
+        <spring-aspects.version>5.3.23</spring-aspects.version>
+        <springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>
+        <liquibase-core.version>4.16.1</liquibase-core.version>
         <lombok.version>1.18.24</lombok.version>
-        <graphql-spring-boot.version>12.0.0</graphql-spring-boot.version>
+        <graphql-spring-boot.version>14.0.0</graphql-spring-boot.version>
         <graphiql-spring-boot.version>11.1.0</graphiql-spring-boot.version>
-        <graphql-java-extended-scalars.version>18.0</graphql-java-extended-scalars.version>
+        <graphql-java-extended-scalars.version>19.0</graphql-java-extended-scalars.version>
         <postgresql.version>42.5.0</postgresql.version>
         <jts2geojson.version>0.17.0</jts2geojson.version>
         <guava.version>31.1-jre</guava.version>
-        <postgresql-testcontainers.version>1.15.1</postgresql-testcontainers.version>
+        <postgresql-testcontainers.version>1.17.4</postgresql-testcontainers.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
 
-        <micrometer-registry-prometheus.version>1.5.1</micrometer-registry-prometheus.version>
+        <micrometer-registry-prometheus.version>1.9.4</micrometer-registry-prometheus.version>
 
         <maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version>
         <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
@@ -42,6 +43,8 @@
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 
         <jib.source.image>openjdk:16-alpine</jib.source.image>
+
+        <jackson-bom.version>2.14.0-rc2</jackson-bom.version>
     </properties>
 
     <dependencies>
@@ -182,6 +185,13 @@
             <version>0.1.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+            <version>${jackson-bom.version}</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -270,26 +280,26 @@
                 </configuration>
             </plugin>
 
-<!--            <plugin>--><!--TODO uncomment to use OpenTelemetry tracing-->
-<!--                <groupId>com.googlecode.maven-download-plugin</groupId>-->
-<!--                <artifactId>download-maven-plugin</artifactId>-->
-<!--                <version>1.6.8</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>download-opentelemetry-agent</id>-->
-<!--                        <phase>process-resources</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>wget</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <url>https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.16.0/opentelemetry-javaagent.jar</url>-->
-<!--                    <unpack>false</unpack>-->
-<!--                    <outputDirectory>${project.build.sourceDirectory}/../jib/opentelemetry/</outputDirectory>-->
-<!--                    <md5>4f97ebd74d075e60c76ecdf47b61006a</md5>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <executions>
+                    <execution>
+                        <id>download-opentelemetry-agent</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <url>https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.16.0/opentelemetry-javaagent.jar</url>
+                    <unpack>false</unpack>
+                    <outputDirectory>${project.build.sourceDirectory}/../jib/opentelemetry/</outputDirectory>
+                    <md5>4f97ebd74d075e60c76ecdf47b61006a</md5>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
@@ -299,7 +309,7 @@
                     <container>
                         <mainClass>io.kontur.insightsapi.InsightsApiApplication</mainClass>
                         <jvmFlags>
-<!--                            <jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>--><!--TODO uncomment to use OpenTelemetry tracing-->
+                            <jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>
                             <jvmFlag>-Dlogging.config=classpath:logback-stdout-json.xml</jvmFlag>
                             <jvmFlag>-server</jvmFlag>
                             <jvmFlag>-Xmx3200m</jvmFlag>
@@ -318,7 +328,7 @@
                         <image>nexus.kontur.io:8084/library/${jib.source.image}</image>
                     </from>
                     <to>
-                        <image>nexus.kontur.io:8085/konturdev/${project.name}:${project.version}</image>
+                        <image>nexus.kontur.io:8085/konturdev/${project.name}:${image.tag}</image>
                     </to>
                 </configuration>
             </plugin>
