--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
   cache:
     type: redis
     cache-names: urban-core, thermal-spot, population, osm-quality, humanitarian-impact, functions, correlation-rate-all,
-      metrics-num-den, correlation-rate-polygon, metrics-num-not-empty-layers, advanced-analytics-all,
-      advanced-analytics, covariance-rate-all, covariance-rate-polygon
+      metrics-num-den, metrics-num-den-with-uuid, correlation-rate-polygon, correlation-rate-polygon-all,
+      metrics-num-not-empty-layers, advanced-analytics-all, advanced-analytics, covariance-rate-all, covariance-rate-polygon
     redis:
       time-to-live: 86400s
   redis:
@@ -117,3 +117,6 @@ database:
   bivariate:
     indicators:
       table: bivariate_indicators_test
+
+calculations:
+  useStatSeparateTables: false
