#13473 Fix for test

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -42,3 +42,10 @@ database:
   bivariate:
     indicators:
       table: bivariate_indicators_test
+
+calculations:
+  useStatSeparateTables: true
+  # TODO: temp configuration, delete when we have final version of transposed table
+  bivariate:
+    indicators:
+      table: bivariate_indicators_wrk
