--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,17 +110,11 @@ graphql-request:
   parser-options:
     max-tokens: 0x7fffffff #Integer.MAX_VALUE
 
-# TODO: temp configuration, delete when we have final version of transposed table
-database:
-  transposed:
-    table: stat_h3_test
-  bivariate:
-    indicators:
-      table: bivariate_indicators_test
-
 calculations:
   useStatSeparateTables: true
   # TODO: temp configuration, delete when we have final version of transposed table
   bivariate:
+    transposed:
+      table: stat_h3_transposed
     indicators:
       table: bivariate_indicators_wrk
