Stops and quality estimation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -124,3 +124,6 @@ calculations:
   bivariate:
     indicators:
       table: bivariate_indicators_wrk
+  # TODO: temp configuration, delete when we have final version of transposed table
+    axis:
+      table: bivariate_axis_test
