Switcher of tables added to bivariate and axis statistics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -117,7 +117,11 @@ calculations:
     transposed:
       table: stat_h3_transposed
     indicators:
-      table: bivariate_indicators_wrk
+      table: bivariate_indicators
+      test:
+        table: bivariate_indicators_wrk
   # TODO: temp configuration, delete when we have final version of transposed table
     axis:
-      table: bivariate_axis_test
+      table: bivariate_axis
+      test:
+        table: bivariate_axis_test
