--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -42,6 +42,10 @@ calculations:
     transposed:
       table: stat_h3_transposed
     indicators:
-      table: bivariate_indicators_wrk
+      table: bivariate_indicators
+      test:
+        table: bivariate_indicators_wrk
     axis:
-      table: bivariate_axis_test
+      table: bivariate_axis
+      test:
+        table: bivariate_axis_test
