#15587. fix functions for tiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -125,3 +125,10 @@ calculations:
       table: bivariate_axis
       test:
         table: bivariate_axis_test
+  tiles:
+    tile-size: 512
+    hex-edge-pixels: 5
+    max-h3-resolution: 8
+    min-h3-resolution: 0
+    max-zoom: 15
+    min-zoom: 0
