--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -48,7 +48,15 @@ calculations:
     axis:
       table: bivariate_axis
       test:
-        table: bivariate_axis_test
+        table: bivariate_axis_v2
+    correlations:
+      table: bivariate_axis_correlation
+      test:
+        table: bivariate_axis_correlation_v2
+    stats:
+      table: bivariate_axis_stats
+      test:
+        table: bivariate_axis_stats_v2
   tiles:
     tile-size: 512
     hex-edge-pixels: 5
