--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: 'jdbc:postgresql://localhost:5432/postgres'
     username: postgres
-    password: password
+    password: postgres
     hikari:
       register-mbeans: true
       pool-name: HikariPool-1
