#17417 add endpoints to get indicators by owner and id

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,8 @@ spring:
 
 springdoc:
   packages-to-scan: io.kontur.insightsapi.controller
+  swagger-ui:
+    path: 'doc'
 
 graphql:
   servlet:
