--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,3 +136,9 @@ calculations:
     min-h3-resolution: 0
     max-zoom: 15
     min-zoom: 0
+
+sentry:
+  dsn: https://fixme@dsn.ingest.sentry.io/project-id
+  # Set traces-sample-rate to 1.0 to capture 100% of transactions for performance monitoring.
+  # We recommend adjusting this value in production.
+  traces-sample-rate: 1.0
