--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,8 +42,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://keycloak01.kontur.io/auth/realms/kontur
-          jwk-set-uri: https://keycloak01.kontur.io/auth/realms/kontur/protocol/openid-connect/certs
+          issuer-uri: https://keycloak01.kontur.io/realms/kontur
+          jwk-set-uri: https://keycloak01.kontur.io/realms/kontur/protocol/openid-connect/certs
 
 springdoc:
   packages-to-scan: io.kontur.insightsapi.controller
