--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,12 @@ spring:
     lazy-initialization: true
   datasource:
     driver-class-name: org.postgresql.Driver
-    primary-url: 'jdbc:postgresql://localhost:5432/postgres?ApplicationName=Insights-Write'
-    secondary-url: 'jdbc:postgresql://localhost:5432/postgres?ApplicationName=Insights-Read'
+    leader-url: 'jdbc:postgresql://localhost:5432/postgres?ApplicationName=Insights-Write'
+    replica-url: 'jdbc:postgresql://localhost:5432/postgres?ApplicationName=Insights-Read'
     username: postgres
     password: postgres
     hikari:
       register-mbeans: true
-      pool-name: HikariPool-1
       connection-timeout: 60000
       validation-timeout: 1000
       maximum-pool-size: 10
